--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,4 @@
 [core]
     remote = mydrive
 ['remote "mydrive"']
-    url = ../gdrive:https:/drive.google.com/drive/folders/1EODSofJfv2JHhRyn_JL4LoOIO8zSjM3w?usp=drive_link
+    url = gdrive://1qTsXlAN_b_glGvzKNZSwncYVA54AlacE
